[package]
name = "cwos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "native"
path = "src/bin/native.rs"

[dependencies]
# todo: set actual version numbers

# STD Only:
dirs = "*"

## UI
eframe = "*"
image = "*"
rodio = { version = "*", features = []}

# STD Variations:
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# No STD:
# ...
